--- a/index.html
+++ b/index.html
@@ -11,18 +11,36 @@
       integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
       crossorigin="anonymous"
     />
+    <style>
+      * {
+        overflow-x: hidden;
+        overflow-y: hidden;
+      }
+	body ,html { 
+  /* The image used */
+  background-image: url("download.jpeg");
+
+  /* Full height */
+  height: 100%; 
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+    </style>
   </head>
   <body>
     <div class="container text-center" style="padding-top: 5vh;">
       <h5>Welcome, PKB!</h5>
     </div>
-    <img src="./logo.jpeg" alt="Logo" width="350px;" height="400px;" />
+    <!---img src="./download.jpeg" alt="Logo" width="325px;" height="400px;" /--->
     <div class="container text-center">
       <div>
         <h6>Tag Line</h6>
       </div>
       <a href="./track.html">
-        <button class="btn btn-success btn-lg" style="margin-top: 10vh;">
+        <button class="btn btn-success btn-lg" style="margin-top: 60vh;">
           Lets Get Started
         </button>
       </a>
