--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>MoveGreen</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
@@ -32,16 +32,16 @@
   </head>
   <body>
     <div class="container text-center" style="padding-top: 5vh;">
-      <h5>Welcome, PKB!</h5>
+      <h5 style="color: white"><strong>Welcome, PKB!</strong></h5>
     </div>
     <!---img src="./download.jpeg" alt="Logo" width="325px;" height="400px;" /--->
     <div class="container text-center">
       <div>
-        <h6>Tag Line</h6>
+        <h6 style="color: white"><em>Earn more by going green on the pedel</em></h6>
       </div>
       <a href="./track.html">
         <button class="btn btn-success btn-lg" style="margin-top: 60vh;">
-          Lets Get Started
+          Let's Get Started
         </button>
       </a>
     </div>
