--- a/track.html
+++ b/track.html
@@ -27,6 +27,7 @@
       <br>
       <br />
       <center><h5 id="mode" style="display: none; color: white; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif">Mode of Transport: Walking</h5></center>
+      <center><h5 >Your Reward Points: <span name="reward"></span></h5></center>
     </div>
     <br />
     <center><div class="container" id="map">
@@ -56,8 +57,15 @@
   <script>
   function showMode(){  
   document.getElementById("mode").style.display = "block";
-  }
+  };
 
   setTimeout(showMode, 5000); 
+  function increaseReward() {
+  reward = (parseInt(reward)+2).toString();
+  };
+  function addReward() {
+    setInterval(increaseReward, 2000);
+  };
+  setTimeout(addReward, 5000);
   </script>
 </html>
