--- a/coupons.html
+++ b/coupons.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>MoveGreen</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
@@ -21,7 +21,7 @@
       </div>
     </nav>
     <div class="container text-center">
-      <h5>Points:</h5>
+      <h5>Points: 80</h5>
       <hr style=" border-top: 2px solid black;" />
       <h5>Exclusively For You</h5>
       <hr style=" border-top: 2px solid black;" />
