--- a/track.html
+++ b/track.html
@@ -34,7 +34,7 @@
       <h5>Map:</h5>
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.583105385621!2d77.53232771522403!3d12.934494790880219!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae3e468d8d36d3%3A0x694d74f6ac640acf!2sPES+University!5e0!3m2!1sen!2sin!4v1552776633036" width="300" height="200" frameborder="0" style="border:0"></iframe></br>
     <div class="container text-center"><br>
-      <button class="btn btn-danger btn-lg">STOP</button>
+      <button class="btn btn-danger btn-lg" onclick="clearInterval(inc);">STOP</button>
     </div>
     </div></center>
 
@@ -67,7 +67,7 @@
   };
   function addReward() {
     document.getElementById("Reward").style.display = "block";
-    setInterval(increaseReward, 2000);
+    inc = setInterval(increaseReward, 2000);
   };
   setTimeout(addReward, 5000);
   </script>
